--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block extrahead %}
+    <meta property="keywords" content="prodigy hack, prodigy, prodigy x, prodigy hackers, prodigy hacking, prodigy math game hack" />
+{% endblock %}
+
 {% block content %}
     {{ super() }}
 
