--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,6 +2,8 @@
 
 {% block extrahead %}
     <meta property="keywords" content="prodigy hack, prodigy, prodigy x, prodigy hackers, prodigy hacking, prodigy math game hack" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8981394123170949"
+     crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
